--- a/Ученики/index.html
+++ b/Ученики/index.html
@@ -74,7 +74,7 @@
 				<div class="info">
 					<div class="name">Вечорко Александр Юрьевич</div>
 					<div class="data">24.10.2005</div>
-					<div class="text">Меняй в своей жизни то, что можешь изменить. Ищи силы принять то, что изменить не можешь и проси мудрость, чтобы отличить одно от другого.</div>
+					<div class="text">Жизнь — есть сочетание меда и желчи</div>
 				</div>
 			</div>
 			<div class="people">
